# telnet

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  platform.h.in  telnet_DIAG.cmake  telnet_HDRS.cmake  telnet_SRCS.cmake  telnet_version.c  telnet_version.h
include/: telnet.h
src/: telnet.c
